devops/kustomize/base/data-service/network-policy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: enable-data-service-to-internet
  labels:
    name: enable-data-service-to-internet
    part-of: hsb
    version: 1.0.0
    component: service
    managed-by: kustomize
    created-by: jeremy.foster
  annotations:
    description: Enable the data-service to communicate with the internet
spec:
  egress:
    - to:
        - ipBlock:
            cidr: 142.34.229.249/32
        - ipBlock:
            cidr: 142.34.94.249/32
      ports:
        - port: 8080
          protocol: TCP
  podSelector:
    matchLabels:
      part-of: hsb
      component: service
  policyTypes:
    - Egress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: enable-data-service-to-api-egress
  labels:
    name: enable-data-service-to-api-egress
    part-of: hsb
    version: 1.0.0
    component: service
    managed-by: kustomize
    created-by: jeremy.foster
  annotations:
    description: Enable the data-service to communicate with the api
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      part-of: hsb
      component: service
  egress:
    - to:
        - podSelector:
            matchLabels:
              part-of: hsb
              component: api
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: enable-data-service-to-api-ingress
  labels:
    name: enable-data-service-to-api-ingress
    part-of: hsb
    version: 1.0.0
    component: service
    managed-by: kustomize
    created-by: jeremy.foster
  annotations:
    description: Enable the data-service to communicate with the api
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      part-of: hsb
      component: api
  ingress:
    - from:
        - podSelector:
            matchLabels:
              part-of: hsb
              component: service
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: enable-data-service-to-keycloak
  labels:
    name: enable-data-service-to-keycloak
    part-of: hsb
    version: 1.0.0
    component: service
    managed-by: kustomize
    created-by: jeremy.foster
  annotations:
    description: Enable the data-service to communicate with the keycloak
spec:
  egress:
    - to:
        - ipBlock:
            cidr: 142.34.229.4/32 # Gold cluster *.apps IP
        - ipBlock:
            cidr: 142.34.64.4/32 # Gold DR cluster *.apps IP in case SSO fails over
      ports:
        - protocol: TCP
          port: 443
  podSelector:
    matchLabels:
      part-of: hsb
      component: service
  policyTypes:
    - Egress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: enable-data-service-to-ches
  labels:
    name: enable-data-service-to-ches
    part-of: hsb
    version: 1.0.0
    component: service
    managed-by: kustomize
    created-by: jeremy.foster
  annotations:
    description: Enable the data-service to communicate with the ches
spec:
  egress:
    - to:
        - ipBlock:
            cidr: 142.34.194.118/32
        - ipBlock:
            cidr: 142.34.229.4/32 # Gold cluster *.apps IP
        - ipBlock:
            cidr: 142.34.64.4/32 # Gold DR cluster *.apps IP in case SSO fails over
      ports:
        - protocol: TCP
          port: 443
  podSelector:
    matchLabels:
      part-of: hsb
      component: service
  policyTypes:
    - Egress
